[gd_scene load_steps=7 format=3 uid="uid://c8y83e16bbuv7"]

[ext_resource type="Script" uid="uid://n7ojfbbxj8ri" path="res://Scenes/MainScenes/setting.gd" id="1_ys8vt"]
[ext_resource type="FontFile" uid="uid://df44rrg8u85p7" path="res://fonts/LionelMicroNbp.ttf" id="2_5ewaf"]
[ext_resource type="Texture2D" uid="uid://evnbsyigdm4c" path="res://game dot/shadow/UI/button1.png" id="3_chcjo"]
[ext_resource type="Texture2D" uid="uid://doiwkjjha5ao7" path="res://game dot/shadow/UI/button2.png" id="4_vo432"]
[ext_resource type="AudioStream" uid="uid://ch4pb100hyjn7" path="res://song/Blop Sound.mp3" id="5_chcjo"]
[ext_resource type="AudioStream" uid="uid://dfw6ex01uaanp" path="res://song/Click small.mp3" id="6_vo432"]

[node name="Setting" type="Node2D"]
script = ExtResource("1_ys8vt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.605274, 0.605274, 0.605274, 1)

[node name="Fullscreen" type="CheckBox" parent="."]
offset_left = 435.0
offset_top = 312.0
offset_right = 736.0
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("2_5ewaf")
theme_override_font_sizes/font_size = 42
text = "FULL SCREEN"

[node name="TextureButton" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 362.0
offset_top = 395.0
offset_right = 805.0
offset_bottom = 549.0
pivot_offset = Vector2(217, 74)
texture_normal = ExtResource("3_chcjo")
texture_hover = ExtResource("4_vo432")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 0
offset_right = 442.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_5ewaf")
theme_override_font_sizes/font_size = 50
text = "TITLE "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_chcjo")

[node name="check" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_vo432")

[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
